web_prog_labs: edited colors of form

--- a/web_prog_labs/html/lab_1_form.html
+++ b/web_prog_labs/html/lab_1_form.html
@@ -123,14 +123,13 @@
     width: 500px;
     padding: 10px;
     border-radius: 35px;
-    background-color:#CAD2C5;
+    background-color:#e8f1de;
   }
 
   /* title */
 
   .form__title {
-
-    background-color: #e8f1de;
+    background-color: #ffffff;
     text-align: center;
     border-radius: 30px 30px 5px 5px;
     height: 50px;
@@ -148,7 +147,7 @@
     margin-top: 2px;
     margin-bottom: 2px;
     padding: 10px;
-    background-color: #e8f1de;
+    background-color: #ffffff;
     border-radius: 5px;
   }
 
@@ -178,7 +177,7 @@
 
   .form__content__name-input {
     border-color: transparent;
-    background-color: #CAD2C5;
+    background-color: #f6f6f6;
     color: #2c3e50;
     border-radius: 10px 3px 3px 10px;
     height: 40px;
@@ -186,7 +185,7 @@
 
   .form__content__surname-input {
     border-color: transparent;
-    background-color: #CAD2C5;
+    background-color: #f6f6f6;
     color: #2c3e50;
     border-radius: 3px 10px 10px 3px;
     height: 40px;
@@ -198,7 +197,7 @@
   }
 
   .form__content__radio__sex-item-male{
-    background-color: #CAD2C5;
+    background-color: #f6f6f6;
     width: 60%;
     padding: 8px;
     margin-right: 1px;
@@ -207,7 +206,7 @@
   }
 
   .form__content__radio__sex-item-female{
-    background-color: #CAD2C5;
+    background-color: #f6f6f6;
     width: 60%;
     padding: 8px;
     text-align: center;
@@ -215,7 +214,7 @@
   }
 
   .form__content__radio__sex-item-helicopter{
-    background-color: #CAD2C5;
+    background-color: #f6f6f6;
     width: 100%;
     padding: 8px;
     margin-left: 1px;
@@ -230,7 +229,7 @@
 
   .form__content__select-day {
     border-color: transparent;
-    background-color: #CAD2C5;
+    background-color: #f6f6f6;
     color: #2c3e50;
     border-radius: 10px 3px 3px 10px;
     margin-right: 1px;
@@ -240,7 +239,7 @@
 
   .form__content__select-month {
     border-color: transparent;
-    background-color: #CAD2C5;
+    background-color: #f6f6f6;
     color: #2c3e50;
     border-radius: 3px;
     height: 40px;
@@ -249,7 +248,7 @@
 
   .form__content__select-year {
     border-color: transparent;
-    background-color: #CAD2C5;
+    background-color: #f6f6f6;
     color: #2c3e50;
     margin-left: 1px;
     border-radius: 3px 10px 10px 3px;
@@ -265,12 +264,12 @@
   .form__content__password-label-text {
     margin-top: 5px;
     align-self: start;
-    color: #52796F;
+    color: #85a679;
   }
 
   .form__content__password-input {
     border-color: transparent;
-    background-color: #CAD2C5;
+    background-color: #f6f6f6;
     color: #2c3e50;
     border-radius: 10px;
     height: 40px;
@@ -279,7 +278,7 @@
   /* footer */
 
   .form__footer {
-    background-color: #e8f1de;
+    background-color: #bfeeaf;
     text-align: center;
     border-radius: 5px 5px 30px 30px;
     height: 50px;
@@ -299,6 +298,6 @@
   /* base */
 
   ::placeholder {
-    color: #e8f1de;
+    color: #7f887f;
   }
 </style>
